--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "expo start -c",
     "clean": "rm -rf .expo .turbo node_modules",
-    "android": "TAMAGUI_TARGET=native yarn expo run:android",
-    "ios": "TAMAGUI_TARGET=native yarn expo run:ios",
-    "web": "TAMAGUI_TARGET=web yarn expo start --web",
+    "android": "yarn expo run:android",
+    "ios": "yarn expo run:ios",
+    "web": "yarn expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "^1.4.2",
     "expo-updates": "^0.15.6",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -43,10 +44,10 @@
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@expo/metro-config": "^0.5.2",
-    "@tamagui/babel-plugin": "1.26.0",
     "@types/react-native-dotenv": "^0.2.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "react-native-dotenv": "^3.4.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.9.4"
   }
 }
