--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "generate": "cd packages/db && yarn prisma generate",
     "build:ui": "cd packages/ui && yarn build",
     "build-desktop": "turbo run build:tauri --filter nextjs",
-    "studio": " cd packages/db && yarn prisma:studio",
-    "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui && manypkg upgrade tamagui-loader"
+    "studio": " cd packages/db && yarn prisma:studio"
   },
   "resolutions": {
     "esbuild": "0.15.5",
