--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,16 +9,11 @@
   "dependencies": {
     "@clerk/nextjs": "^4.6.15",
     "@my/ui": "*",
-    "@tamagui/animations-react-native": "^1.26.0",
-    "@tamagui/colors": "^1.26.0",
-    "@tamagui/font-inter": "^1.26.0",
-    "@tamagui/lucide-icons": "^1.26.0",
-    "@tamagui/shorthands": "^1.26.0",
-    "@tamagui/themes": "^1.26.0",
     "@tanstack/react-query": "4.22.0",
     "@trpc/next": "10.9.0",
     "@trpc/react-query": "10.9.0",
     "expo-linking": "3.3.0",
+    "nativewind": "^2.0.11",
     "solito": "2.1.3"
   }
 }
