--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "main": "./index.ts",
   "types": "./index.ts",
+  "type": "module",
   "license": "MIT",
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
