--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "sideEffects": [
     "*.css"
   ],
+  "type": "module",
   "private": true,
   "types": "./types/index",
   "main": "src/index.tsx",
@@ -11,21 +12,5 @@
   "files": [
     "types",
     "dist"
-  ],
-  "scripts": {
-    "build": "tamagui-build",
-    "watch": "tamagui-build --watch",
-    "clean": "rm -rf dist types"
-  },
-  "dependencies": {
-    "@tamagui/animations-react-native": "^1.26.0",
-    "@tamagui/font-inter": "^1.26.0",
-    "@tamagui/react-native-media-driver": "^1.26.0",
-    "@tamagui/shorthands": "^1.26.0",
-    "@tamagui/themes": "^1.26.0",
-    "tamagui": "^1.26.0"
-  },
-  "devDependencies": {
-    "@tamagui/build": "^1.26.0"
-  }
+  ]
 }
